# Wagtail-Pipit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  circle.yml  cookiecutter.json  docker-compose-ci.yml  docker-compose-circleci.yml  docker-compose-nginx.yml  docker-compose.yml
.circleci/: config.yml
Company-Project/src/: .coveragerc  Dockerfile  Dockerfile-alpine  Dockerfile-apline.bak  Dockerfile-slim  Dockerfile-slim-buster  docker-entrypoint.sh  manage.py  mypy.ini  pyproject.toml  pytest.circleci.ini  pytest.github.ini  pytest.ini  pytest.local.ini  uwsgi.ini
Company-Project/src/customdocument/: models.py  serializers.py
Company-Project/src/customimage/: apps.py  factories.py  models.py  serializers.py
Company-Project/src/customuser/: models.py
Company-Project/src/main/: mixins.py  models.py  serializers.py
Company-Project/src/nextjs/: api.py  factories.py
Company-Project/src/pipit/: context_processors.py  urls.py  wagtail_hooks.py  wsgi.py
Company-Project/src/requirements/: base.txt  local.txt  mypy.txt  test.txt
Company-Project/src/sitesettings/: apps.py  factories.py  models.py  serializers.py
Company-Project/src/utils/: email.py  env.py
Company-Project/src/wagtail_cookie_notice/: apps.py  menu.py  middleware.py  models.py  serializers.py  wagtail_hooks.py
docker/: .env  (+3 more)
{{cookiecutter.project_name}}/src/: Dockerfile  Dockerfile-alpine  Dockerfile_noop  circle.test.env  docker-entrypoint.sh  example.env  manage.py  mypy.ini  mypy_django.ini  pyproject.toml  pytest.circleci.ini  pytest.ini  pytest.local.ini
{{cookiecutter.project_name}}/src/core/: context_processors.py  urls.py  wsgi.py
{{cookiecutter.project_name}}/src/customdocument/: models.py
{{cookiecutter.project_name}}/src/customimage/: models.py  serializers.py
{{cookiecutter.project_name}}/src/customuser/: admin.py
{{cookiecutter.project_name}}/src/exampleapp/: __init__.py  apps.py  forms.py  models.py  tests.py
{{cookiecutter.project_name}}/src/main/: mixins.py  serializers.py
{{cookiecutter.project_name}}/src/nextjs/: api.py  factories.py
{{cookiecutter.project_name}}/src/pages/: apps.py  tests.py  urls.py
{{cookiecutter.project_name}}/src/pipit/: context_processors.py  test_runner.py  urls.py  wagtail_hooks.py  wsgi.py
{{cookiecutter.project_name}}/src/requirements/: base.txt  local.txt  mypy.txt  prod.txt  test.txt
{{cookiecutter.project_name}}/src/sitesettings/: admin.py  apps.py  factories.py  models.py  serializers.py
{{cookiecutter.project_name}}/src/templates/: base.html
{{cookiecutter.project_name}}/src/utils/: email.py  env.py
(+922 files in other folders)
