[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
requires-python = ">=3.12"
dependencies = [
    "Django==6.0.3",
    "gunicorn==25.1.0",
    "gevent==25.9.1",
    "psycopg==3.3.2",
    "python-dotenv==1.2.1",
    "sentry_sdk[django]==2.53.0",
    "wagtail==7.3.1",
    "wagtail-meta-preview==4.2.1",
    "wagtail_headless_preview==0.8.0",
    "whitenoise==6.11.0",
]

[dependency-groups]
test = [
    "coverage",
    "pytest==9.0.2",
    "pytest-django==4.12.0",
    "pytest-env",
    "wagtail-factories==4.4.0",
]
dev = [
    {include-group = "test"},
    "django-debug-toolbar",
    "django-stubs==5.2.9",
    "djangorestframework-stubs==3.16.8",
    "mypy==1.19.1",
    "debugpy",
    "ruff",
]
prod = []
stage = []

[tool.uv]
package = false

[tool.ruff]
line-length = 88

exclude = [
    "venv",
    "*/migrations/*",
    "node_modules",
]

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["E501"]
# Enable isort rules for import sorting
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"pipit/settings/dev.py" = ["F405", "F403"]
"pipit/settings/test.py" = ["F405", "F403"]
"pipit/settings/stage.py" = ["F405", "F403"]
"pipit/settings/prod.py" = ["F405", "F403"]
